<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity3">

    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_height="630dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/material_on_surface_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/emailreg"
                android:layout_width="300dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="47dp"
                android:layout_marginTop="393dp"
                android:layout_marginEnd="43dp"
                android:layout_marginBottom="180dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="#2962FF" />

            <EditText
                android:id="@+id/repassreg"
                android:layout_width="297dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="466dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="111dp"
                android:ems="10"
                android:hint="@string/re_enter_password"

                android:inputType="textPassword"
                android:textColorHint="#2962FF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="233dp"
                android:layout_height="37dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="23dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="134dp"
                android:layout_marginBottom="576dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/new_rgistrration"
                android:textColor="#2962FF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/passreg"
                android:layout_width="298dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="45dp"
                android:layout_marginTop="329dp"
                android:layout_marginEnd="47dp"
                android:layout_marginBottom="245dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColorHint="#2962FF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="156dp"
                android:layout_height="63dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="104dp"
                android:layout_marginTop="530dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="37dp"
                android:background="#2962FF"
                android:backgroundTint="#2962FF"
                android:text="@string/REGISTER"
                android:textColor="@color/white"
                app:iconTint="#2962FF" />

            <EditText
                android:id="@+id/name"
                android:layout_width="301dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="494dp"
                android:ems="10"
                android:hint="@string/enetr_your_name"
                android:inputType="textPersonName"
                android:textColorHint="#2962FF" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="299dp"
                android:layout_height="57dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="42dp"
                android:layout_marginTop="141dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="432dp"
                android:ems="10"
                android:hint="Phone Number"
                android:inputType="phone"
                android:textColorHint="#2962FF" />

            <EditText
                android:id="@+id/year"
                android:layout_width="291dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="208dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="372dp"
                android:ems="10"
                android:hint="Year of studying"
                android:inputType="number"
                android:textColorHint="#2962FF" />

            <EditText
                android:id="@+id/domain"
                android:layout_width="298dp"
                android:layout_height="53dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="262dp"
                android:layout_marginEnd="49dp"
                android:layout_marginBottom="315dp"
                android:ems="10"
                android:hint="@string/domain_specialisation"
                android:inputType="textPersonName"
                android:textColorHint="#2962FF" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>