<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cimage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cimage"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/textView2"

        android:contentDescription="@string/wave"
        app:srcCompat="@drawable/bbbottom" />

    <LinearLayout
        android:id="@+id/Linear1"
        android:layout_width="match_parent"


        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="45sp"
            android:layout_weight="1"
            android:contentDescription="@string/domain"
            app:srcCompat="@drawable/ic_domain" />

        <TextView
            android:id="@+id/textView3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"

            android:textColor="#000"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/Linear1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:contentDescription="@string/phone"
            app:srcCompat="@drawable/ic_phone" />

        <TextView
            android:id="@+id/textView4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"

            android:textColor="#000"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="36dp"
            android:layout_height="36dp"

            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/cemail"
            app:srcCompat="@drawable/ic_email" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:textColor="#000"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Linear4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Linear3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/year"
            app:srcCompat="@drawable/ic_school24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/year"
            android:textColor="#000"
            android:textSize="21sp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#304FFE"

        app:itemIconTint="@drawable/bottom"
        app:itemTextColor="@drawable/bottom"
        app:menu="@menu/bottomnavigation" />


</RelativeLayout>