<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"


    tools:context=".MainActivity2">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="327dp"
        android:layout_height="75dp"
        android:backgroundTint="#00B8D4"
        app:cardBackgroundColor="@color/material_on_surface_stroke"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/emaillog"
                android:layout_width="279dp"
                android:layout_height="56dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="11dp"
                android:backgroundTint="#00B8D4"
                android:ems="10"
                android:hint="@string/enter_email"

                android:inputType="textPersonName"
                android:textColorHint="@color/black" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="327dp"
        android:layout_height="75dp"
        android:backgroundTint="#00B8D4"
        app:cardBackgroundColor="@color/material_on_surface_stroke"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.664">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/passlogin"
                android:layout_width="281dp"
                android:layout_height="59dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="26dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#00B8D4"
                android:ems="10"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:textColorHint="@color/black" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:backgroundTint="#0091EA"
        android:text="@string/log_in"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="238dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655"
        app:srcCompat="@drawable/icon" />

</androidx.constraintlayout.widget.ConstraintLayout>